--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-pandas
-networkx
-numpy
-plotly
-pyvis
-scikit-learn
-seaborn
-nbformat
+nbformat==5.10.4
+networkx==3.2.1
+numpy==2.0.2
+pandas==2.2.3
+plotly==5.24.1
+pyvis==0.3.2
+scikit-learn==1.5.2
+seaborn==0.13.2
+Sphinx==7.4.7
+sphinx-rtd-theme==3.0.1
